--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -8,37 +8,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img class="emoji-nav" src="stuck_out_tongue_winking_eye.png">lingus</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <!-- Add links here in the future
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-          -->
-        </li>
-      </ul>
-
-      <!-- Search function -->
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Enter a word here">
-        </div>
-        <button type="submit" class="btn btn-default">Search</button>
-      </form>
-
+      <div class="text-center">
+        <img class="emoji-nav" src="stuck_out_tongue_winking_eye.png">
+        <span class="navtitle">lingus</span>
+      </div>
       <!-- User Controls -->
+      <!--
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -51,6 +30,7 @@
           </ul>
         </li>
       </ul>
+      -->
     </div><!-- /.navbar-collapse -->
 
   </nav>
