Added iron router and set up basic routing

--- a/client/views/lingos/lingo_item.html
+++ b/client/views/lingos/lingo_item.html
@@ -1,5 +1,5 @@
 <template name="lingoItem">
   <div class="lingo">
-    {{name}}
+    <a href="{{pathFor 'lingoPage'}}">{{name}}</a>
   </div>
 </template>
