--- a/client/views/lingos/lingos_list.html
+++ b/client/views/lingos/lingos_list.html
@@ -16,7 +16,10 @@
     </p>
   </div>
   <form role="add">
-    <div class="form-group">
+    <div class="form-group input-group">
+      <span class="input-group-addon">
+        <span class="glyphicon glyphicon-plus"></span>
+      </span>
       <input type="text" class="form-control" placeholder="Add a new lingo">
     </div>
   </form>
