--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -13,8 +13,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <div class="text-center">
-        <img class="emoji-nav" src="stuck_out_tongue_winking_eye.png">
-        <span class="navtitle">lingus</span>
+        <img class="emoji-nav" src="/stuck_out_tongue_winking_eye.png">
+        <a class="navtitle" href="{{pathFor 'welcome'}}">lingus</a>
       </div>
       <!-- User Controls -->
       <!--
