--- a/client/views/lingos/lingos_list.html
+++ b/client/views/lingos/lingos_list.html
@@ -13,7 +13,9 @@
     <p class="text-center">LINGO LIST</p>
     <p>
       {{#each lingos}}
-        {{> lingoItem}}
+        <div class="lingo">
+          <a href="{{pathFor 'lingoPage'}}">{{name}}</a>
+        </div>
       {{/each}}
     </p>
   </div>
