Added validation for new lingo

--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -8,6 +8,7 @@
 
     <div class="row">
       <div class="col-xs-4">
+        {{> errors}}
         {{> lingosList}}
       </div>
       <div class="col-xs-8">
