Added validation for updating lingo

--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -7,8 +7,13 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-4">
+      <div class="col-xs-12">
         {{> errors}}
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-4">
         {{> lingosList}}
       </div>
       <div class="col-xs-8">
