Added definition modification

--- a/client/views/application/welcome.html
+++ b/client/views/application/welcome.html
@@ -1,3 +1,6 @@
 <template name="welcome">
   <h1>Welcome to lingus</h1>
+  <p>
+    Use lingus to share your lingos with friends!
+  </p>
 </template>
