--- a/client/views/lingos/lingo_item.html
+++ b/client/views/lingos/lingo_item.html
@@ -2,10 +2,9 @@
   <h1>
     {{name}}
     <small>
-      <a href="{{pathFor 'lingoEdit'}}">
+      <a class="text-muted" href="{{pathFor 'lingoEdit'}}">
         <span class="glyphicon glyphicon-pencil"></span>
       </a>
     </small>
   </h1>
-  {{> definitionAdd}}
 </template>
