--- a/client/views/lingos/lingo_add.html
+++ b/client/views/lingos/lingo_add.html
@@ -3,7 +3,7 @@
     <div class="form-group input-group">
       <input name="name" type="text" class="form-control" placeholder="Add a new lingo">
       <span class="input-group-btn">
-        <button type="submit" class="btn btn-default">
+        <button type="submit" class="btn btn-primary">
           <span class="glyphicon glyphicon-plus"></span>
         </button>
       </span>
