--- a/public/main.css
+++ b/public/main.css
@@ -21,3 +21,14 @@
     font-size: 20px;
     font-weight: 500;
 }
+
+.spinner {
+    position: relative;
+    top: -70px;
+}
+
+.vcenter {
+    float: none;
+    display: inline-block;
+    vertical-align: middle;
+}
