Switched style for example to blockquote

--- a/client/views/definitions/definition.html
+++ b/client/views/definitions/definition.html
@@ -5,9 +5,11 @@
         <h4 class="list-group-item-heading">
           {{detail}}
         </h4>
-        <p class="list-group-item-text example">
+        <blockquote>
+          <p class="list-group-item-text example">
             {{{exampleWithLineBreaks example}}}
-        </p>
+          </p>
+        </blockquote>
       </div>
       <div class="col-xs-2">
         <div class="pull-right">
