Added definition tests for laika and changed color of submit button in definition edit view

--- a/client/views/definitions/definition_edit.html
+++ b/client/views/definitions/definition_edit.html
@@ -9,7 +9,7 @@
     <div class="form-group">
       <textarea name="example" class="form-control" rows="2">{{example}}</textarea>
     </div>
-    <button type="submit" class="btn btn-default">
+    <button type="submit" class="btn btn-primary">
       Submit
     </button>
     <a class="btn btn-default" href="{{pathFor 'lingoPage' _id=lingo._id}}">
