--- a/client/views/definitions/definition.html
+++ b/client/views/definitions/definition.html
@@ -13,13 +13,19 @@
       </div>
       <div class="col-xs-2">
         <div class="pull-right">
-          <span class="glyphicon glyphicon-star"></span> {{starCount}}
+          <a href="#" class="star">
+            <span class="glyphicon glyphicon-star glyphicon-lg"></span>
+          </a>
+          <span class="starcount">{{starCount}}</span>
         </div>
       </div>
     </div>
 
     <div class="row">
       <div class="col-xs-12">
+        <div class="pull-left text-muted">
+          Updated {{timeFromNow updated}}
+        </div>
         <div class="pull-right">
           <a class="text-muted" href="{{pathFor 'definitionEdit'}}">
             <span class="glyphicon glyphicon-pencil"></span>
