--- a/public/main.css
+++ b/public/main.css
@@ -1,34 +1,43 @@
 .emoji {
-    width: 1.5em;
-    height: 1.5em;
-    display: inline-block;
-    margin-bottom: -0.25em;
+  width: 1.5em;
+  height: 1.5em;
+  display: inline-block;
+  margin-bottom: -0.25em;
 }
 
 .emoji-nav {
-    width: 2em;
-    height: 2em;
-    display: inline-block;
-    margin-bottom: 1.4em;
+  width: 2em;
+  height: 2em;
+  display: inline-block;
+  margin-bottom: 1.4em;
 }
 
 .navtitle {
-    font-size: 36px;
-    font-weight: 500;
+  font-size: 36px;
+  font-weight: 500;
 }
 
 .lingo {
-    font-size: 20px;
-    font-weight: 500;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .spinner {
-    position: relative;
-    top: -70px;
+  position: relative;
+  top: -70px;
 }
 
 .vcenter {
-    float: none;
-    display: inline-block;
-    vertical-align: middle;
+  float: none;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.glyphicon-lg {
+  font-size: 24px;
+  line-height: 1.33;
+}
+
+.starcount {
+  font-size: 30px;
 }
