--- a/client/views/definitions/definition.html
+++ b/client/views/definitions/definition.html
@@ -1,38 +1,43 @@
 <template name="definition">
   <div class="list-group-item">
-    <div class="row">
-      <div class="col-xs-10">
-        <h4 class="list-group-item-heading">
-          {{detail}}
-        </h4>
-        <blockquote>
-          <p class="list-group-item-text example">
-            {{{exampleWithLineBreaks example}}}
-          </p>
-        </blockquote>
-      </div>
-      <div class="col-xs-2">
-        <div class="pull-right">
-          <a href="#" class="star">
-            <span class="glyphicon glyphicon-star glyphicon-lg"></span>
-          </a>
-          <span class="starcount">{{starCount}}</span>
+    <div {{attributes}}>
+      <div class="row">
+        <div class="col-xs-10">
+          <h4 class="list-group-item-heading">
+            {{detail}}
+          </h4>
+          <blockquote>
+            <p class="list-group-item-text example">
+              {{{exampleWithLineBreaks example}}}
+            </p>
+          </blockquote>
+        </div>
+        <div class="col-xs-2">
+          <div class="pull-right">
+            <a href="#" class="star">
+              <span class="glyphicon glyphicon-star glyphicon-lg"></span>
+            </a>
+            <span class="starcount">{{starCount}}</span>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="pull-left text-muted">
-          Updated {{timeFromNow updated}}
-        </div>
-        <div class="pull-right">
-          <a class="text-muted" href="{{pathFor 'definitionEdit'}}">
-            <span class="glyphicon glyphicon-pencil"></span>
-          </a>
-          <a class="text-danger delete" href="#">
-            <span class="glyphicon glyphicon-trash"></span>
-          </a>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="pull-left text-muted">
+            {{pos}}
+            {{attributes.style}}
+            {{attributes.class}}
+            Updated {{timeFromNow updated}}
+          </div>
+          <div class="pull-right">
+            <a class="text-muted" href="{{pathFor 'definitionEdit'}}">
+              <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+            <a class="text-danger delete" href="#">
+              <span class="glyphicon glyphicon-trash"></span>
+            </a>
+          </div>
         </div>
       </div>
     </div>
