--- a/public/main.css
+++ b/public/main.css
@@ -41,3 +41,18 @@
 .starcount {
   font-size: 30px;
 }
+
+.definition {
+  position: relative;
+  transition: all 300ms 0ms ease-in;
+}
+
+.definition .animate {
+  -webkit-transition: all 300ms 0ms;
+  -webkit-transition-delay: ease-in;
+  -moz-transition: all 300ms 0ms ease-in;
+  -moz-transition-delay: ease-in;
+  -o-transition: all 300ms 0ms ease-in;
+  -o-transition-delay: ease-in;
+  transition: all 300ms 0ms ease-in;
+}
