added flag ability for definitions

--- a/client/views/definitions/definition.html
+++ b/client/views/definitions/definition.html
@@ -34,6 +34,9 @@
             <a class="text-muted" href="{{pathFor 'definitionEdit'}}">
               <span class="glyphicon glyphicon-pencil"></span>
             </a>
+            <a class="text-muted flag" href="#">
+              <span class="glyphicon glyphicon-flag"></span>
+            </a>
             <a class="text-danger delete" href="#">
               <span class="glyphicon glyphicon-trash"></span>
             </a>
